Fix broken overflow rule

--- a/joinsupport/main.scss
+++ b/joinsupport/main.scss
@@ -219,8 +219,8 @@ footer {
   display: inline-block;
   max-width: 150px;
   margin: 20px 20px;
-  overflow: ;
 }
+
 .grid ul li img {
   width: 100%;
   border-radius: 50%;
